sys/linux: add UAC2, UAC3, and MIDI USB audio class descriptions
This patch extends the USB audio fuzzing support by adding syzlang
descriptions for:

- UAC2 (USB Audio Class 2.0) devices with clock management units,
  interface association descriptors, and extended format types.
- UAC3 (USB Audio Class 3.0) devices including power domain
  descriptors and cluster information segments.
- USB MIDI devices with jack descriptors and streaming endpoints.

A new generateAudioDeviceDescriptor function patches in both
auto-extracted USB IDs from the kernel driver matching rules and
hardcoded quirk IDs from the USB audio driver sources (sound/usb/).
This approach follows the pattern established for the HID and printer
classes, allowing exercising driver quirks that cannot be automatically
extracted.

The config descriptor template now includes an EXTRA field to support
Interface Association Descriptors required by UAC2/UAC3. This also
requires adjusting the interface field index in patchUsbDeviceID.

--- a/AUTHORS
+++ b/AUTHORS
@@ -56,3 +56,4 @@ Rivos Inc.
 Jeongjun Park
 International Business Machines Corporation
 Institute of Software Chinese Academy of Sciences
+Berk Cem Goksel
