contributors: add myself
Add myself to contributors given that I didn't update this file
since my first contribution:
commit 08f0359 ("docs/syscall_descriptions_syntax.md: short change description").

Signed-off-by: Jiakai Xu <jiakaiPeanut@gmail.com>
Signed-off-by: Jiakai Xu <xujiakai2025@iscas.ac.cn>

--- a/AUTHORS
+++ b/AUTHORS
@@ -55,3 +55,4 @@ Elektrobit Automotive GmbH
 Rivos Inc.
 Jeongjun Park
 International Business Machines Corporation
+Institute of Software Chinese Academy of Sciences
